changed the access modifier of the method to private